--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,35 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
-</head>
+  <link rel="stylesheet" type="text/css" href="/home/patrick/ironhack/lab-css-instagram-clone/lab-css-instagram-clone/starter-code/css/main.css"></link>
 <body>
-  Instagram
+  <div class="background_one"></div>
+  <div><img src="/home/patrick/ironhack/lab-css-instagram-clone/lab-css-instagram-clone/starter-code/images/phones.png" alt="phones" class="iphone"></div>
+  <div><img src="/home/patrick/ironhack/lab-css-instagram-clone/lab-css-instagram-clone/starter-code/images/brand.png" alt="brand" class="brand_logo"></div>  
+  <div><button class="log_in" type="button"style="display:inline-block"><img src="/home/patrick/ironhack/lab-css-instagram-clone/lab-css-instagram-clone/starter-code/images/home.png" style="float:left;margin-right:0.5em">Log in</button></div>
+  <div class="paragraph"><div class="overlay"><h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br>
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  Oh yeah, did we mention it's free?</p>
+</div>
+</div class="overlay">
+  <div><div><img src="/home/patrick/ironhack/lab-css-instagram-clone/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="iphone badge" class="iphone_badge"></div>  
+  <div><img src="/home/patrick/ironhack/lab-css-instagram-clone/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="android badge" class="android_badge"></div>    
+</div>
+</body>
+<footer class="footer">
+  <a href="blablabla">About Us</a>
+  <a href="blablabla">Support</a>
+  <a href="blablabla">Blog</a>
+  <a href="blablabla">Press</a>
+  <a href="blablabla">API</a>
+  <a href="blablabla">Jobs</a>
+  <a href="blablabla">Privacy</a>
+  <a href="blablabla">Terms</a>
 
   &copy; 2014 Instagram
-</body>
+</footer>
 </html>
