--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/main.css"></link>
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+<div class="top-blue">
+  <div class="phones"> <img src="images/phones.png" alt="phones">  </div>
+  <div class="brand"><img src="images/brand.png" alt="Instagram"> </div>
+  <button class="log-in" type="button"> <img src="images/home.png" alt="home">  Log in </button>
+      
+  <div class="container-info">
+      <h2>Capture and Share <br/> the World's Moments</h2>
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+      <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. 
+      You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+      <p>Oh yeah, did we mention it's free? </p> 
+      <div class="appstore"> <img src="images/badge-iphone.png" alt="Download on the App Store"> </div>
+      <div class="googleplay"><img src="images/badge-android.png" alt=" Get it on Google Play"></div>
+  </div>
 
-  Capture and Share the World's Moments
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="bottom-white"></div>
+ 
+<footer class="bottom">
+    <a href="#">About Us</a>
+    <a href="#"> Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    &copy; 2014 Instagram
+</footer>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
