--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+   <div class= "fondo">
+   <head>
+      <link rel="stylesheet" href="css/main.css"></link>
+   </head>
+   <body>
+    <div class = "logo">
+    <img src="images/brand.png">    
+    </div>
+         <div class="phone">
+              <img src="images/phones.png">
+         </div>
+         <div class="texto">
+            <div class = "fondoblanco">
+                <h1>
+                    Capture and Share<br>the World's Moments
+                 </h1>
+            <p> Instagram is a <strong>fast</strong>, <strong>beautiful</strong>, and <strong>fun</strong> way to share your life with<br> friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash; it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            </div> 
+              </img>
+         </div>
+         <div class="lista">
+            <footer>
+                 About Us 
+                 Support 
+                 Blog 
+                 Press 
+                 API 
+                 Jobs 
+                Privacy 
+                 Terms
+            </footer>
+         </div>
+         </ul> 
+      </div>
+      &copy; 2014 Instagram
+   </body>
 </html>
