--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,28 +7,32 @@
 <body>
     <div class="background-azul">
       <div class="container">
-        <div class="float col1 border-box">
+        <div class="float col1">
           <img src="images/phones.png" alt="phones">
         </div>
-        <div class="float col2 background-pic border-box">
+        <div class="float col2">
           <div class="col2">
-            <img class="inline border-box" src="images/brand.png" alt="instagram brand">
+            <img src="images/brand.png" alt="instagram brand">
             <div class="btn">
               <img src="images/home.png" alt="">
               <p>Log in</p>
             </div>
           </div>
-          <h2> Capture and Share<br>the World's Moments</h2>
-          <p>  Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+          <div class="img-background">
+            <div class="text">
+              <h2> <br>Capture and Share<br>the World's Moments</h2>
+              <p>  Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
 
-              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-            
-              Oh yeah, did we mention it's free?
-          </p>
-          <div>
-              <img src="images/badge-iphone.png" alt="badge iphone">
-              <img src="images/badge-android.png" alt="badge android">
-          </div>
+                  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                
+                  Oh yeah, did we mention it's free?
+              </p>
+              <div class="container-img">
+                  <img src="images/badge-iphone.png" alt="badge iphone">
+                  <img src="images/badge-android.png" alt="badge android">
+              </div>
+            </div>
+        </div>
         </div>
       </div>
     </div>
@@ -46,7 +50,7 @@
       <li> Jobs</li>
       <li>Privacy</li>
       <li>Terms</li>
-      <li>&copy; 2014 Instagram</li>
+      <li id="grey">&copy; 2014 Instagram</li>
     </ol>
   </footer>  
 </body>
