--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,66 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="./css/main.css" rel="stylesheet" type="text/css" >
 </head>
 <body>
-  Instagram
+  <div class="fondo">
 
-  Capture and Share the World's Moments
+  <section class="phone-comtainer">
+    <figure>
+      <img alt="phones" src="./images/phones.png">
+    </figure>
+  </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="home-page">
+   
+    <div>
+      <figure>
+        <img alt="Instagram Logo" src="./images/brand.png">
+        <div class="log-in">
+         <button name="Log in" class="boton">
+          <img alt="Log in icon" src="./images/home.png">
+          <h3><b>Log in</b></h3>
+         </button>
+        </div>
+      </figure>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="text-container">
+      <div class="moments-container">
+      <h1>Capture and Share <br>the World's Moments</h1>
+      </div>
 
-  Oh yeah, did we mention it's free?
+      <div class="description">
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life
+        with friends and family.</p>
+  
+      <p>Take a picture or video, choose a filter to transform its look 
+        and feel, then post to Instagram &mdash; it's that easy. You can
+        even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <figure class="download">
+       <img alt="Download on the App Store" src="./images/badge-iphone.png">
+       <img alt="Get it on Google Play" src="./images/badge-android.png">
+      </figure>
+    </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </div>  
+  <footer class="about">
+    <ul>
+      <li>ABOUT Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+  </div>
 </body>
 </html>
