--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
-<body>
-  Instagram
+<body>  
+    <section class="section1">
+      <div class="top">
+        <div class="casa">
+          <figure>
+            <img width="30px" src="images/home.png" alt="casa">
+          </figure>
+          <h2>Log in</h2>
+        </div>
+          <figure>  
+            <img width="350px" src="images/brand.png" alt="marca">
+          </figure>
+          <figure>
+            <img src="images/phones.png" alt="cel">
+          </figure>
+      </div>
+    </section>
+    <section class="section2">
+      <div class="fondo">
+        <div class="texto">
+          <h1> Capture and Share <br> the World's Moments</h1>
+          <p>Instagram is a <b>fast, beautiful</b>  and <b>fun</b> way to share your life <br> with friends and family.</p>
+          Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash; it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+          <figure class="descargas">
+            <figure>
+            <img src="images/badge-iphone.png" alt="apple">
+            </figure>
+            <figure>
+            <img src="images/badge-android.png" alt="andr">
+            </figure>
+          </figure>
+      </div>
+    </section>
+    <section class="section3">
+      <footer>
+        <div class="pie">
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li class="clarito">&copy; 2014 Instagram</li> 
+        </ul>
+  
+        </div>
+      </footer>
+    </section>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
