--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <header id = "site-header"></header>
+  <!--mobile-image-->
+  <section id = "site-main" class="container">
+    <div class="header-main">
+      <img src="../starter-code/images/brand.png" alt="instagram-logo" class="logo">
+      <a href="#">
+        <img src="../starter-code/images/home.png" alt="home-icon" class="icon">
+        Log in
+      </a>
+    </div>
+    <div class="main-text">
+        <h1>Capture and Share<br> the World's Moments</h1>
 
-  Capture and Share the World's Moments
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+      
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      
+        <p>Oh yeah, did we mention it's free?</p>
+    </div>
+    <div class="download">
+    <a href="#">
+      <img src="../starter-code/images/badge-iphone.png" alt="app-store-download">
+    </a>
+    <a href="#">
+      <img src="../starter-code/images/badge-android.png" alt="google-play-download">
+    </a>
+    </div>
+  </section>
+  <footer id="site-footer">
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul> 
+  </footer>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
