mobile firts instagram

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <header class = "instagram-header">
+    <img src ="./images/brand.png" width="200px">
+    <div class= "login-button">
+      <button><img src = "./images/home.png" width="20px"><p>Log in</p></button>
+    </div>
+  </header>
+  <section class = "main-section">
+    <h1> Capture and Share<br>the World's Moments</h1>
+    <p>
+    Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br>
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
 
-  Capture and Share the World's Moments
+    Oh yeah, did we mention it's free?
+    </p>
+    <div class = "badge-buttons">
+    <a href="#"><img src = "./images/badge-iphone.png" width="115px"></a>
+    <a href="#"><img src = "./images/badge-android.png" width="110px"></a>
+  </div>
+  </section>
+<footer class = "instagram-footer">
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li><span class = "trademark ">&copy; 2014 Instagram</span></li>
+  </ul>
+  </footer>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
