instagram project adjust white picture

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="utf-8">
   <title>Instagram</title>
+  <link rel="stylesheet" href="/home/fredrik/lab-css-instagram-clone/starter-code/css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="mainbody">
+  <h3>Capture and Share the World's Moments</h3>
+  <p> Instagram is a <b>fast</b>, <strong>beautiful</strong> and <b>fun</b> way to share your life with friends and family.</p>
+  <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+  <p> Oh yeah, did we mention it's free? </p>
+</div>
+<div class="applogos">
+  <img src="/home/fredrik/lab-css-instagram-clone/starter-code/images/badge-android.png">
+  <img src="/home/fredrik/lab-css-instagram-clone/starter-code/images/badge-android.png">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<footer>
+  <a href="#">ABout Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
 
   &copy; 2014 Instagram
+</footer>
+
 </body>
 </html>
