--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
+
 <body>
-  Instagram
+  <div class="background-blue"></div>
+  
+  <section class="big-one">
+    <section class="phone">
+        <img src="images/phones.png">
+    </section>
 
-  Capture and Share the World's Moments
+    <section class="header">
+      <div class="instagram-image">
+        <img src="images/brand.png">
+      </div>
+      <div class="login-button">
+        <button class="login"><img src="images/home.png">Log in</button>
+      </div>
+    </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <section class="text">
+      <h1>Capture and Share <br> the World's Moments</h1>
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br>
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+      Oh yeah, did we mention it's free?</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <a href="#"><img src="images/badge-iphone.png"></a>
+      <a href="#"><img src="images/badge-android.png"></a>
+    </section>
 
-  Oh yeah, did we mention it's free?
+  </section>
+  <section class="clear"></section>
 
-  Download on the App Store
-  Get it on Google Play
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <li id="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
