first version, before comment with the rest of the class
git status

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <header></header>
+  <div class= "content-container">
+    <div id="site-header">
 
-  Capture and Share the World's Moments
+      <img src="./images/brand.png" alt="Instagram">
+      <div>
+        <a><img src="./images/home.png" alt="Home Logo"></a>
+        <a>Log in</a>
+      </div>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <article>
+      <div class="content">
+        <h2>Capture and Share <br>the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Instagram is a fast, beautiful and fun way to share 
+        your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+        <p>Take a picture or video, choose a filter to transform 
+        its look and feel, then post to Instagram &mdash; 
+        it's that easy. You can even share to Facebook, Twitter, 
+        Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="app-links">
+        <a><img src="./images/badge-iphone.png" alt="Download on the App Store"></a>
+        <a><img src="./images/badge-android.png" alt="Get it on Google Play"></a> 
+      </div>
+    </article>
+  
 
-  &copy; 2014 Instagram
+  <footer id="site-footer">
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+    </ul>
+    <span>&copy; 2014 Instagram</span>
+  </footer>
+</div>
 </body>
 </html>
