--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <!--
+    <section id='phone-img'>
+      <img src="images/phones.png" alt="phone">
+    </section>
+  -->
+    <section id='info'>
+      <header>
+        <div class="logo">
+          <img class='block' src="images/brand.png " alt="instagram logo">
+          
+        </div>  
+        <button>
+          <img src="images/home.png" alt="home">
+          Log in
+        </button>
+      </header>
 
-  Capture and Share the World's Moments
+      <article>
+        <h1>Capture and Share <br> the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </article>
+      <div>
+        <input type="image" src="images/badge-iphone.png" alt="download on the app store">
+        <input type="image" src="images/badge-android.png" alt="get it on google play">
+        
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    </section>
+  </div>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+   
 </body>
 </html>
