--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,46 +6,50 @@
 </head>
 <body>
   <div class="container">
-    <div class="col">
-      <img src="images/phones.png" alt="Instagram App">
-    </div>
-    <div class="col">
-      <div class="header">
-        <div class="logo">
+    <div class="content">
+      <div class="col text-center">
+        <img src="images/phones.png" alt="Instagram App">
+      </div>
+      <div class="col presentation">
+        <div class="header-presentation">
+          <div class="logo">
             Instagram
+          </div>
+          <div class="login">
+            Log in
+          </div>
+          <div class="clearfix"></div>
         </div>
-        <div class="login">
-
+        <div class="intro-presentation">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="app-logos">
+          <div class="app-store">
+            Download on the App Store
+          </div>
+          <div class="google-play">
+            Get it on Google Play
+          </div>
         </div>
       </div>
-      <div class="presentation">
-        <h2>Capture and Share the World's Moments</h2>
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-        <p>Oh yeah, did we mention it's free?</p>
-      </div>
-      <div class="app-logos">
-        <div class="app-store">
-          Download on the App Store
-        </div>
-        <div class="google-play">
-          Get it on Google Play
-        </div>
-      </div>
+      <div class="clearfix"></div>
     </div>
+    <footer class="footer">
+      <ul class="nav text-center">
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </div>
-  <footer class="footer">
-    <ul class="nav">
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
-      <li>&copy; 2014 Instagram</li>
-    </ul>
-  </footer>
 </body>
 </html>
