--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,43 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="content">
+    <div class="left">
+     <img src="images/phones.png" class="phones">
+    </div>
+    <div class="left">
+      <div class="logo">
+        <img src="images/brand.png">
+        <button>
+          <img src="images/home.png"><p>Log in</p>
+        </button>
+      </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <div class="text">
+        <h2>Capture and Share the World's Moments</h2>      
+        <p> Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family. </p>      
+        <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      
+        <img src="images/badge-iphone.png" alt= Download on the App Store>
+        <img src="images/badge-android.png" alt= Get it on Google Play>
+      </div>
+    </div>
+  
+    <footer>
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
+      &copy; 2014 Instagram
+    </footer>
+  </div>
 </body>
 </html>
