--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <section id="main">
+    <aside><img class="phones" src="./images/phones.png " alt="Phones"></aside>
+    <article>
+      <header>
+        <div id="brand-name">
+          <img src="./images/brand.png" alt="Instagram">
+        </div>
+        <div id="log-in">
+          <button><img src="./images/home.png" alt="Home Button">Log In</button>
+        </div>
+      </header>
+      <section>
+      <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>    
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img src="./images/badge-iphone.png" alt="Download on App Store">
+        <img src="./images/badge-android.png" alt="Get it on Android">
+      </section>
+    </article>
+    </section>
+  <footer>
+    <div>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+      <p>&copy; 2014 Instagram</p>
+  </div>
+  </footer>
+  
+  </body>
 </html>
