--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -29,15 +29,17 @@
     </div>
   
     <footer>
-      About Us
-      Support
-      Blog
-      Press
-      API
-      Jobs
-      Privacy
-      Terms
-      &copy; 2014 Instagram
+      <ul>
+        <li class="link">Us</li>
+        <li class="link">Support</li>
+        <li class="link">Blog</li>
+        <li class="link">Press</li>
+        <li class="link">API</li>
+        <li class="link">Jobs</li>
+        <li class="link">Privacy</li>
+        <li class="link">Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
     </footer>
   </div>
 </body>
