--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,72 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+  
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+
 </head>
+
 <body>
-  Instagram
+  <div class="header">
 
-  Capture and Share the World's Moments
+    <div class="phones">
+        <img src="images/phones.png">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="description">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <img src="images/brand.png">
 
-  Oh yeah, did we mention it's free?
+        <button class="login">
+          <img src="images/home.png">
+          <p>Log in</p>
+        </button>
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="description-background">
+          <h2>Capture and Share<br>the World's Moments</h2>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+          <p>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life<br>with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look<br>and feel,then post to Instagram &mdash; it's that easy. You can<br>even share to Facebook, Twitter, Tumblr and more. It's a<br>new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+          
+          <div class="badges">
+            <ul>
+              <li>
+                <img src="images/badge-iphone.png">
+              </li>
+              <li>
+                <img src="images/badge-android.png">
+              </li>
+            </ul>
+          </div>
+          
+      </div>
+    </div>
+  </div>  
 
-  &copy; 2014 Instagram
+  <div class="footer">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="instagram">&copy; 2014 Instagram</li>
+    </ul>
+  </div>
+
 </body>
+
 </html>
