--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,8 +4,11 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <head>
+  <img src="images/brand.png" alt= "Instagram">
+  <div class= "boton"><img src="images/home.png" alt= "Home">Log in</div>
 
+</head>
   Capture and Share the World's Moments
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
