--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,42 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-hhhhhhh
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<main>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="left"></div>
+  <div class="right">
+    <div class="logo"></div>
+    <div class="button">Login</div>
+    <div class="text">
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    </div>
+    <div class="badge">
+      <img src="images/badge-iphone.png" alt="badge iphone">
+      <img src="images/badge-android.png" alt="badge android">
+    </div>
+  </div>
+  <footer>
+    <ul>
+      <li><p>About Us</p></li>
+      <li><p>Support</p></li>
+      <li><p>Blog</p></li>
+      <li><p>Press</p></li>
+      <li><p>API</p></li>
+      <li><p>Jobs</p></li>
+      <li><p>Privacy</p></li>
+      <li><p>Terms</p></li>
+      <li><p>&copy; 2014 Instagram</p></li>
+    </ul>
+  </footer>
 
-  Oh yeah, did we mention it's free?
+</main>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
