--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,30 +4,34 @@
   <title>Instagram</title>
 </head>
 <body>
-  <head>
-  <img src="images/brand.png" alt= "Instagram">
-  <div class= "boton"><img src="images/home.png" alt= "Home">Log in</div>
+  <header>
+    <img src="images/brand.png" alt= "Instagram">
+    <div class= "boton"><img src="images/home.png" alt= "Home">Log in</div>
+  </header>
+  <div class = "descripcion">
+   Capture and Share the World's Moments
+   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-</head>
-  Capture and Share the World's Moments
+   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+   Oh yeah, did we mention it's free?
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+   <img src="images/badge-iphone.png" alt= "Download on the App Store">
+   <img src="images/badge-android.png" alt="Get it on Google Play">
+  </div>
+  <div class="telefono">
+    <img src= "images/phones.png" alt = "Teléfono">
+  </div>
+  <footer>
+   About Us
+   Support
+   Blog
+   Press
+   API
+   Jobs
+   Privacy
+   Terms
+  </footer>
 
   &copy; 2014 Instagram
 </body>
