Set background images

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,10 +13,10 @@
       <div class="col presentation">
         <div class="header-presentation">
           <div class="logo">
-            Instagram
+            <img src="images/brand.png" alt="Instagram">
           </div>
           <div class="login">
-            Log in
+            <button>Log in</button>
           </div>
           <div class="clearfix"></div>
         </div>
@@ -27,12 +27,13 @@
           <p>Oh yeah, did we mention it's free?</p>
         </div>
         <div class="app-logos">
-          <div class="app-store">
-            Download on the App Store
+          <div class="badge-iphone">
+            <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"></a>            
           </div>
-          <div class="google-play">
-            Get it on Google Play
+          <div class="badge-android">
+            <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>            
           </div>
+          <div class="clearfix"></div>
         </div>
       </div>
       <div class="clearfix"></div>
