Fondo puesto en otro elemento, width de main reducida, z-index para los elementos de articulo, un div addicional para cubrir transparencia de png del fondo de articulo

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,24 +6,28 @@
 </head>
 <body>
   <section id="main">
-    <aside><img class="phones" src="./images/phones.png " alt="Phones"></aside>
-    <article>
-      <header>
+    <aside>
+      <img class="phones" src="./images/phones.png " alt="Phones">
+    </aside>
+    <header>
         <div id="brand-name">
           <img src="./images/brand.png" alt="Instagram">
         </div>
         <div id="log-in">
           <button><img src="./images/home.png" alt="Home Button">Log In</button>
         </div>
-      </header>
-      <section>
-      <h2>Capture and Share the World's Moments</h2>
-        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>    
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-        <p>Oh yeah, did we mention it's free?</p>
-        <img src="./images/badge-iphone.png" alt="Download on App Store">
-        <img src="./images/badge-android.png" alt="Get it on Android">
-      </section>
+    </header>
+    <article>
+      <div>
+        <section>
+          <h2>Capture and Share the World's Moments</h2>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>    
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <img src="./images/badge-iphone.png" alt="Download on App Store">
+            <img src="./images/badge-android.png" alt="Get it on Android">
+        </section>
+      </div>
     </article>
     </section>
   <footer>
