Pequeños upgrades para el botón de arriba  - sombrita, alineación, font-weight

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,7 +14,7 @@
           <img src="./images/brand.png" alt="Instagram">
         </div>
         <div id="log-in">
-          <button><img src="./images/home.png" alt="Home Button">Log In</button>
+          <button><img src="./images/home.png" alt="Home Button"><span>Log In</span></button>
         </div>
     </header>
     <article>
