--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
-  Instagram
+  <section class="section-fondo">
+    dsadafdf
+  </section>
+  <section class="section-movil">
+    <img src="images/phones.png" alt="phones">
+  </section>
+  <section class="section-logo">
+    <img src="images/brand.png" alt="">
+  </section>
+  <section class="section-texto">
+      <h1>Instagram</h1>
 
   Capture and Share the World's Moments
 
@@ -17,7 +27,9 @@
 
   Download on the App Store
   Get it on Google Play
+  </section>
 
+<!-- 
   About Us
   Support
   Blog
@@ -27,6 +39,6 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
+  &copy; 2014 Instagram -->
 </body>
 </html>
