Finalizado. Comentarios para hoja CSS, partes CSS no necesarias eliminadas. Width fijo estandarizado para todos los elementos.

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  <section id="main">
+  <section id="main" class="center">
     <aside>
       <img class="phones" src="./images/phones.png " alt="Phones">
     </aside>
@@ -19,7 +19,7 @@
     </header>
     <article>
       <div>
-        <section>
+        <section class="center">
           <h2>Capture and Share the World's Moments</h2>
             <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>    
             <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
@@ -30,8 +30,8 @@
       </div>
     </article>
     </section>
-  <footer>
-    <div>
+  <footer class="center">
+    <div class="center">
       <ul>
         <li>About Us</li>
         <li>Support</li>
