--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,26 +2,28 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <header>
+  <main class= "cabeza">
+  
+  <div class="telefono">
+      <img src= "images/phones.png" alt = "Teléfono">
+    </div>
     <img src="images/brand.png" alt= "Instagram">
     <div class= "boton"><img src="images/home.png" alt= "Home">Log in</div>
-  </header>
   <div class = "descripcion">
-   Capture and Share the World's Moments
-   Instagram is a fast, beautiful and fun way to share your life with friends and family.
+   <h2>Capture and Share the World's Moments</h2>
+   <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+   <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-   Oh yeah, did we mention it's free?
+   <p>Oh yeah, did we mention it's free?</p>
 
    <img src="images/badge-iphone.png" alt= "Download on the App Store">
    <img src="images/badge-android.png" alt="Get it on Google Play">
   </div>
-  <div class="telefono">
-    <img src= "images/phones.png" alt = "Teléfono">
-  </div>
+  
   <footer>
    About Us
    Support
@@ -34,5 +36,6 @@
   </footer>
 
   &copy; 2014 Instagram
+</main>  
 </body>
 </html>
