--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <header class="header">
+  </header>
 
-  Capture and Share the World's Moments
+  <section class="phones">
+    <div class="phone-images">
+      <img src="images/phones.png" alt="Mobile Phones">
+    </div>
+  </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section class="content">
+    <div class="main">
+      <a href="#">
+        <img src="images/brand.png" alt="Instagram Brand Image">
+      </a>
+      <button class="button">
+        <a href="#">
+          <img src="images/home.png" alt="Home Button">
+          <p>Log in</p>
+        </a>
+      </button>
+    </div>
+    <div class="text-content">
+      <div class="content-title">
+        <h1>Capture and Share<br>the World's Moments</h1>
+      </div>
+      <div class="content-text">
+        <p class="text">Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        </p>
+      </div class="text-wrapper">
+    </div>
+    <div class="markets">
+        <img class="market-item" src="images/badge-iphone.png" alt="Apple Store">
+        <img class="market-item" src="images/badge-android.png" alt="Play Store">
+      </div>
+  </section>
+  <section class="footer float-fix">
+    <div class="contact">
+      <ul>
+        <li>ABOUT</li>
+        <li>US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li><span class="copy">2014 INSTAGRAM</span></li>
+      </ul>
+    </div>
+  </section>
 </body>
 </html>
