--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,13 +5,16 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <main class= "cabeza">
-  
+<main class= "cabeza">
   <div class="telefono">
       <img src= "images/phones.png" alt = "Teléfono">
     </div>
+    <div class = "izq">
+    <div class = "logos">
     <img src="images/brand.png" alt= "Instagram">
     <div class= "boton"><img src="images/home.png" alt= "Home">Log in</div>
+    </div>
+    
   <div class = "descripcion">
    <h2>Capture and Share the World's Moments</h2>
    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
@@ -23,7 +26,8 @@
    <img src="images/badge-iphone.png" alt= "Download on the App Store">
    <img src="images/badge-android.png" alt="Get it on Google Play">
   </div>
-  
+</div>
+</main> 
   <footer>
    About Us
    Support
@@ -33,9 +37,7 @@
    Jobs
    Privacy
    Terms
+   &copy; 2014 Instagram
   </footer>
-
-  &copy; 2014 Instagram
-</main>  
 </body>
 </html>
