--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class="main">
+    <div class="middle">
 
-  Capture and Share the World's Moments
+    <div class="movil">
+      <img class="fotomovil" src="./images/phones.png" alt="foto moviles">
+      <div class="clearfix"></div>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="text">
+      <div class="text-up">
+      <img class="insta" src="./images/brand.png" alt="logo instagram">
+        <img class="home" src="./images/home.png" alt="image home">
+        <div class="clearfix"></div>
+        </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <div class="text-down">
 
-  Oh yeah, did we mention it's free?
+  
 
-  Download on the App Store
-  Get it on Google Play
+  <h1>Capture and Share the World's Moments</h1>
 
+  <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+  
+
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+  <p>Oh yeah, did we mention it's free?</p>
+
+
+<img class="apple" src="./images/badge-iphone.png">
+<img class="android" src="./images/badge-android.png">
+<div class="clearfix"></div>
+
+  <div class="clearfix"></div>
+  </div>
+  </div>
+  </div>
+
+</div>
+
+<footer class="footer">
   About Us
   Support
   Blog
@@ -27,5 +58,17 @@
   Terms
 
   &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
