--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,10 +11,10 @@
     </div>
     <div class = "izq">
     <div class = "logos">
-    <img src="images/brand.png" alt= "Instagram">
-    <div class= "boton"><img src="images/home.png" alt= "Home">Log in</div>
+    <img class="insta" src="images/brand.png" alt= "Instagram">
+    <div class= "boton"><img src="images/home.png" alt= "Home"><span class ="blanco">Log in</span></div>
     </div>
-    
+    <div class = "limpia"> </div>
   <div class = "descripcion">
    <h2>Capture and Share the World's Moments</h2>
    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
