footer y botón por terminar

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,39 +6,42 @@
 </head>
 <body>
   <section class="section-fondo">
-    dsadafdf
   </section>
   <section class="section-movil">
     <img src="images/phones.png" alt="phones">
   </section>
   <section class="section-logo">
-    <img src="images/brand.png" alt="">
+     <img src="images/brand.png" alt="brand">
+     <p><img src="images/home.png" alt="home">  Log In</p>
   </section>
-  <section class="section-texto">
-      <h1>Instagram</h1>
+  <section class="section-texto">            
+      <h1>Capture and Share the World's Moments</h1>
+      <ul>
+        <li>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</li>
+        <li>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</li>
+        <li>Oh yeah, did we mention it's free?</li>
+      </ul>
+      
+      <img src="images/badge-iphone.png" alt="badge-iphone">
+      <img src="images/badge-android.png" alt="badge-android">
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
   </section>
+<div class="clearfix"></div>
+<footer>
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
+</footer>
 
-<!-- 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram -->
+
 </body>
 </html>
