a falta del botón

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -37,7 +37,7 @@
     <li>Jobs</li>
     <li>Privacy</li>
     <li>Terms</li>
-    <li>&copy; 2014 Instagram</li>
+    <li id="copyR">&copy; 2014 Instagram</li>
   </ul>
 </footer>
 
