--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -23,7 +23,7 @@
 
       <div class="botones">
           <img class="logo" src="./images/brand.png" alt="">
-          <img class="home" src="./images/home.png" alt="">
+          <button>Log in</button> 
       </div>
       
       <div class="texto">
@@ -61,8 +61,9 @@
       <li>Jobs</li>
       <li>Privacy</li>
       <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
     </ul>
-    &copy; 2014 Instagram
+    
   </div> 
 </footer>
 
