Todo mas o menos ok excepto el boton home

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -30,7 +30,7 @@
         <h2>Capture and Share<br> the World's Moments</h2>
     
         <p>
-          Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with friends and family.
           <br><br>         
           Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
           <br><br>
@@ -61,7 +61,7 @@
       <li>Jobs</li>
       <li>Privacy</li>
       <li>Terms</li>
-      <li>&copy; 2014 Instagram</li>
+      <li class="grey">&copy; 2014 Instagram</li>
     </ul>
     
   </div> 
