--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -23,41 +23,43 @@
         </div>
 
         <div class="text-down">
-
-  
-
-  <h1>Capture and Share the World's Moments</h1>
+<h1>Capture and Share the World's Moments</h1>
 
   <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
   
-
-  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
   <p>Oh yeah, did we mention it's free?</p>
+</div>
 
-
+<div class="apps"></div>
 <img class="apple" src="./images/badge-iphone.png">
 <img class="android" src="./images/badge-android.png">
 <div class="clearfix"></div>
+<div class="clearfix"></div>
+</div>
+
 
   <div class="clearfix"></div>
   </div>
-  </div>
+ 
   </div>
 
 </div>
 
-<footer class="footer">
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<footer>
+  <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li class="footer-link" href="#">@ 2014 Instagram</li>
+  </ul>
+  
   </footer>
 </body>
 </html>
