Boton home posicionado, creado gradiente, cambiada forma del div

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -23,7 +23,8 @@
 
       <div class="botones">
           <img class="logo" src="./images/brand.png" alt="">
-          <button>Log in</button> 
+          <!-- <button>Log in</button> -->
+          <button class="home"><img class="logo" src="./images/home.png" alt="">Log in</button>
       </div>
       
       <div class="texto">
