--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <main>
+    <section class="section1">
+      <img src="images/phones.png" alt="iPhones">
+    </section>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+    <section class="section2">
+      <nav>
+        <img src="images/brand.png" alt="Instagram">
+        <button class="login">
+          <img src="images/home.png" alt="Login">
+          <span>Login</span>
+        </button>
+      </nav>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <h1>Capture and share the World's Moments</h1>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.Oh yeah, did we mention it's free?</p>
 
-  &copy; 2014 Instagram
+      <img src="images/badge-iphone.png" alt="appstore">
+      <img src="images/badge-android.png" alt="android">
+
+    </section>
+  </main>
+  <footer>
+    <ul>
+      <li class="azul">
+        About Us
+      </li>
+      <li class="azul">
+        Support
+      </li>
+      <li class="azul">
+        Blog
+      </li>
+      <li class="azul">
+        Press
+      </li>
+      <li class="azul">
+        API
+      </li>
+      <li class="azul">
+        Jobs
+      </li>
+      <li class="azul">
+        Privacy
+      </li>
+      <li class="azul">
+        Terms
+      </li>
+      <li class="azul">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
