--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -23,8 +23,7 @@
 
       <div class="botones">
           <img class="logo" src="./images/brand.png" alt="">
-          <!-- <button>Log in</button> -->
-          <button class="home"><img class="logo" src="./images/home.png" alt="">Log in</button>
+          <button class="home"><img src="./images/home.png" alt="">Log in</button>
       </div>
       
       <div class="texto">
