parte superior completed

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,8 +2,17 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+  <main>
+    <div class = "mobile"></div>
+    <div class = "insta"></div>
+    <div class = "logo"></div>
+    <div class = "input">Log In <button type="submit"><img src= "https://res.cloudinary.com/esponjita/image/upload/v1521582642/home.png"</button></div>
+    
+ <div class = "text"></div>
+
   Instagram
 
   Capture and Share the World's Moments
@@ -17,15 +26,20 @@
   Download on the App Store
   Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+ </div>
+  </main>
+  <footer>
+   <ul><p>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li>&copy; 2014 Instagram</li>
+   </ul></p>
+  </footer>
 </body>
 </html>
