--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -18,7 +18,7 @@
     <div class="text">
       <div class="text-up">
       <img class="insta" src="./images/brand.png" alt="logo instagram">
-        <img class="home" src="./images/home.png" alt="image home">
+        <button type=button>Log in</button>
         <div class="clearfix"></div>
         </div>
 
@@ -49,16 +49,17 @@
 
 <footer>
   <ul>
-  <li>About Us</li>
-  <li>Support</li>
-  <li>Blog</li>
-  <li>Press</li>
-  <li>API</li>
-  <li>Jobs</li>
-  <li>Privacy</li>
-  <li>Terms</li>
-  <li class="footer-link" href="#">@ 2014 Instagram</li>
+  <li><a href="#">About Us</a></li>
+  <li><a href="#">Support</a></li>
+  <li><a href="#">Blog</a></li>
+  <li><a href="#">Press</a></li>
+  <li><a href="#">API</a></li>
+  <li><a href="#">Jobs</a></li>
+  <li><a href="#">Privacy</a></li>
+  <li><a href="#">Terms</a></li>
+  <li><a class="grey" href="#">@ 2014 Instagram</a></li>
   </ul>
+  
   
   </footer>
 </body>
