finish clone css

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<div class="general">
+<section>
+  <img class="img-movil" src="images/phones.png" alt="Phones">
+</section>
+<section class="column-2">
+  <div>
+    <img class="logo" src="images/brand.png" alt="phones">
+    <button class="button" type="button">Log in</button>
+  </div>  
+  <div class="clearfix"></div>
+  <div class="texto">
+      <div class="context-texto">
+        <h2>Capture and Share<br> the World's Moments</h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun </b>way to share your life
+          <br>with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram &mdash; it's that easy. You
+          can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br>new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+    </div>
+    <div class="texto-down">
+        <img class="image-app" src="images/badge-iphone.png" alt="App Store" >
+        <img class="image-app" src="images/badge-android.png" alt="Google Play">
+    </div>
+  </div>
+</section>
+<div class="clearfix"></div>
+<footer class="footer">
+ <ul class="list-footer">
+  <li class="list-li" >About Us</li>
+  <li class="list-li" >Support</li>
+  <li class="list-li" >Blog</li>
+  <li class="list-li" >Press</li>
+  <li class="list-li" >API</li>
+  <li class="list-li" >Jobs</li>
+  <li class="list-li" >Privacy</li>
+  <li class="list-li" >Terms</li>
+  <li class="list-li color" > &copy; 2014 Instagram</li>
+ </ul>     
+</footer>
+</div>
 </body>
 </html>
